--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <body>
   <h1>Hello World</h1>
   <p>I'm hosted with GitHub Pages. </p>
+  <script src = index.js></script>
   <script>
+
 (function(h,e,a,t,m,p) {
 m=e.createElement(a);m.async=!0;m.src=t;
 p=e.getElementsByTagName(a)[0];p.parentNode.insertBefore(m,p);
 })(window,document,'script','https://u.heatmap.it/log.js');
+
 </script>
 </body>
 </html>
