--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <script src = index.js></script>
   <script>
 
-(function(h,e,a,t,m,p) {
-m=e.createElement(a);m.async=!0;m.src=t;
-p=e.getElementsByTagName(a)[0];p.parentNode.insertBefore(m,p);
-})(window,document,'script','https://u.heatmap.it/log.js');
+//HEATMAP BS
+// (function(h,e,a,t,m,p) {
+// m=e.createElement(a);m.async=!0;m.src=t;
+// p=e.getElementsByTagName(a)[0];p.parentNode.insertBefore(m,p);
+// })(window,document,'script','https://u.heatmap.it/log.js');
 
 </script>
 </body>
