--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
+<style>
+h1{
+    color: rgb(200,55,0);
+}
+</style>
 <body>
+
   <h1>Hello World</h1>
   <p>I'm hosted with GitHub Pages. </p>
   <script src = index.js></script>
