--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ h1{
   <script>
 
 //HEATMAP BS
-// (function(h,e,a,t,m,p) {
-// m=e.createElement(a);m.async=!0;m.src=t;
-// p=e.getElementsByTagName(a)[0];p.parentNode.insertBefore(m,p);
-// })(window,document,'script','https://u.heatmap.it/log.js');
+(function(h,e,a,t,m,p) {
+m=e.createElement(a);m.async=!0;m.src=t;
+p=e.getElementsByTagName(a)[0];p.parentNode.insertBefore(m,p);
+})(window,document,'script','https://u.heatmap.it/log.js');
 
 </script>
 </body>
